fix: typod path parameter in `3.0/readme.yaml`

--- a/3.0/yaml/readme.yaml
+++ b/3.0/yaml/readme.yaml
@@ -638,7 +638,7 @@ paths:
           description: Could not find target fork in database
       security:
       - apiKey: []
-  "/version/:versionId":
+  "/version/{versionId}":
     get:
       operationId: getVersion
       summary: Get version
