--- a/2.0/yaml/petstore.yaml
+++ b/2.0/yaml/petstore.yaml
@@ -12,7 +12,7 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 host: petstore.swagger.io
-basePath: "/v2"
+basePath: '/v2'
 tags:
   - name: pet
     description: Everything about your Pets
@@ -29,7 +29,7 @@ tags:
 schemes:
   - http
 paths:
-  "/pet":
+  '/pet':
     post:
       tags:
         - pet
@@ -48,14 +48,14 @@ paths:
           description: Pet object that needs to be added to the store
           required: true
           schema:
-            "$ref": "#/definitions/Pet"
+            '$ref': '#/definitions/Pet'
       responses:
         '405':
           description: Invalid input
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
+            - write:pets
+            - read:pets
     put:
       tags:
         - pet
@@ -74,7 +74,7 @@ paths:
           description: Pet object that needs to be added to the store
           required: true
           schema:
-            "$ref": "#/definitions/Pet"
+            '$ref': '#/definitions/Pet'
       responses:
         '400':
           description: Invalid ID supplied
@@ -84,9 +84,9 @@ paths:
           description: Validation exception
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
-  "/pet/findByStatus":
+            - write:pets
+            - read:pets
+  '/pet/findByStatus':
     get:
       tags:
         - pet
@@ -116,14 +116,14 @@ paths:
           schema:
             type: array
             items:
-              "$ref": "#/definitions/Pet"
+              '$ref': '#/definitions/Pet'
         '400':
           description: Invalid status value
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
-  "/pet/findByTags":
+            - write:pets
+            - read:pets
+  '/pet/findByTags':
     get:
       tags:
         - pet
@@ -148,15 +148,15 @@ paths:
           schema:
             type: array
             items:
-              "$ref": "#/definitions/Pet"
+              '$ref': '#/definitions/Pet'
         '400':
           description: Invalid tag value
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
+            - write:pets
+            - read:pets
       deprecated: true
-  "/pet/{petId}":
+  '/pet/{petId}':
     get:
       tags:
         - pet
@@ -177,7 +177,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            "$ref": "#/definitions/Pet"
+            '$ref': '#/definitions/Pet'
         '400':
           description: Invalid ID supplied
         '404':
@@ -217,8 +217,8 @@ paths:
           description: Invalid input
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
+            - write:pets
+            - read:pets
     delete:
       tags:
         - pet
@@ -246,9 +246,9 @@ paths:
           description: Pet not found
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
-  "/pet/{petId}/uploadImage":
+            - write:pets
+            - read:pets
+  '/pet/{petId}/uploadImage':
     post:
       tags:
         - pet
@@ -280,12 +280,12 @@ paths:
         '200':
           description: successful operation
           schema:
-            "$ref": "#/definitions/ApiResponse"
+            '$ref': '#/definitions/ApiResponse'
       security:
         - petstore_auth:
-          - write:pets
-          - read:pets
-  "/store/inventory":
+            - write:pets
+            - read:pets
+  '/store/inventory':
     get:
       tags:
         - store
@@ -305,7 +305,7 @@ paths:
               format: int32
       security:
         - api_key: []
-  "/store/order":
+  '/store/order':
     post:
       tags:
         - store
@@ -321,15 +321,15 @@ paths:
           description: order placed for purchasing the pet
           required: true
           schema:
-            "$ref": "#/definitions/Order"
+            '$ref': '#/definitions/Order'
       responses:
         '200':
           description: successful operation
           schema:
-            "$ref": "#/definitions/Order"
+            '$ref': '#/definitions/Order'
         '400':
           description: Invalid Order
-  "/store/order/{orderId}":
+  '/store/order/{orderId}':
     get:
       tags:
         - store
@@ -352,7 +352,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            "$ref": "#/definitions/Order"
+            '$ref': '#/definitions/Order'
         '400':
           description: Invalid ID supplied
         '404':
@@ -379,7 +379,7 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Order not found
-  "/user":
+  '/user':
     post:
       tags:
         - user
@@ -395,11 +395,11 @@ paths:
           description: Created user object
           required: true
           schema:
-            "$ref": "#/definitions/User"
+            '$ref': '#/definitions/User'
       responses:
         default:
           description: successful operation
-  "/user/createWithArray":
+  '/user/createWithArray':
     post:
       tags:
         - user
@@ -417,11 +417,11 @@ paths:
           schema:
             type: array
             items:
-              "$ref": "#/definitions/User"
+              '$ref': '#/definitions/User'
       responses:
         default:
           description: successful operation
-  "/user/createWithList":
+  '/user/createWithList':
     post:
       tags:
         - user
@@ -439,11 +439,11 @@ paths:
           schema:
             type: array
             items:
-              "$ref": "#/definitions/User"
+              '$ref': '#/definitions/User'
       responses:
         default:
           description: successful operation
-  "/user/login":
+  '/user/login':
     get:
       tags:
         - user
@@ -480,7 +480,7 @@ paths:
               description: date in UTC when token expires
         '400':
           description: Invalid username/password supplied
-  "/user/logout":
+  '/user/logout':
     get:
       tags:
         - user
@@ -494,7 +494,7 @@ paths:
       responses:
         default:
           description: successful operation
-  "/user/{username}":
+  '/user/{username}':
     get:
       tags:
         - user
@@ -514,7 +514,7 @@ paths:
         '200':
           description: successful operation
           schema:
-            "$ref": "#/definitions/User"
+            '$ref': '#/definitions/User'
         '400':
           description: Invalid username supplied
         '404':
@@ -539,7 +539,7 @@ paths:
           description: Updated user object
           required: true
           schema:
-            "$ref": "#/definitions/User"
+            '$ref': '#/definitions/User'
       responses:
         '400':
           description: Invalid user supplied
@@ -659,7 +659,7 @@ definitions:
         type: integer
         format: int64
       category:
-        "$ref": "#/definitions/Category"
+        '$ref': '#/definitions/Category'
       name:
         type: string
         example: doggie
@@ -676,7 +676,7 @@ definitions:
           name: tag
           wrapped: true
         items:
-          "$ref": "#/definitions/Tag"
+          '$ref': '#/definitions/Tag'
       status:
         type: string
         description: pet status in the store
