revert: only sync on main

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,8 +8,8 @@ name: 'Sync Petstore 🐶'
 # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
 on:
   push:
-    # branches:
-    #   - main
+    branches:
+      - main
 
 jobs:
   sync:
