--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "prettier": "prettier --list-different --write \"./**/**.js\"",
-    "test": "jest"
+    "prettier": "prettier --list-different --write \"./**/**.{js,json,md,yaml}\"",
+    "test": "vitest"
   },
   "devDependencies": {
-    "@readme/eslint-config": "^10.6.2",
+    "@readme/eslint-config": "^12.0.2",
     "@readme/openapi-parser": "^2.5.0",
     "eslint": "^8.44.0",
     "fast-glob": "^3.3.0",
-    "jest": "^29.6.1",
-    "prettier": "^2.8.7"
+    "prettier": "^3.0.1",
+    "vitest": "^0.34.1"
   },
   "prettier": "@readme/eslint-config/prettier"
 }
