--- a/3.1/yaml/webhooks.yaml
+++ b/3.1/yaml/webhooks.yaml
@@ -15,6 +15,8 @@ webhooks:
         '200':
           description: Return a 200 status to indicate that the data was received
             successfully
+      tags:
+        - Webhooks
 components:
   schemas:
     Pet:
