--- a/3.1/yaml/train-travel.yaml
+++ b/3.1/yaml/train-travel.yaml
@@ -10,6 +10,7 @@ info:
   license:
     name: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
     identifier: CC-BY-NC-SA-4.0
+    url: https://github.com/bump-sh-examples/train-travel-api/blob/main/LICENSE_CC-BY-NC-SA-4.0
 
 x-topics:
   - title: Getting started
