feat: also port changes over to yaml

--- a/3.0/yaml/readme-extensions.yaml
+++ b/3.0/yaml/readme-extensions.yaml
@@ -29,20 +29,88 @@ paths:
         https://docs.readme.com/docs/openapi-extensions#custom-code-samples
       tags:
         - Custom code samples
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              '$ref': '#/components/schemas/Tag'
+            examples:
+              userRegistration:
+                value:
+                  id: 1234
+                  email: test@example.com
+                  name: Test user name
+              userRegistration alt:
+                value:
+                  id: 5678
+                  email: test@example.com
+                  name: Test user name
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              examples:
+                TestExample:
+                  summary: An example of a cat
+                  value:
+                    name: Fluffy
+                    petType: Cat
+                    color: White
+                    gender: male
+                    breed: Persian
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              examples:
+                curlExample:
+                  summary: An example of a cat
+                  value:
+                    missing: can't find your stuff dawg
       x-readme:
         code-samples:
           - name: Custom cURL snippet
             language: curl
             code: curl -X POST https://api.example.com/v2/alert
             install: brew install curl
+            correspondingExample: TestExample
+          - name: Another cURL snippet
+            language: curl
+            code: http POST https://api.example.com/v2/another-alert
+            install: brew install httpie
+            correspondingExample: curlExample
           - language: curl
             code: |-
               # This custom cURL snippet does not have a custom name so it has the name of "Default #2".
 
               curl -X POST https://api.example.com/v2/alert
+          - name: Yet another custom snippet
+            language: curl
+            code: curl -X POST https://api.example.com/v2/alert
+            install: brew install curl
+            correspondingExample: TestExample
+          - name: Yet another custom snippet
+            language: python
+            code: |-
+              import requests
+
+              print("do something idk")
+            install: pip install requests
+            correspondingExample: TestExample
+          - name: Yet another custom snippet
+            language: node
+            code: |-
+              import something from 'requestidk';
+
+              console.log('do something idk');
+            install: npm install requestidk
+            correspondingExample: curlExample
+        samples-languages:
+          - shell
+          - python
+          - node
     get:
       operationId: x-code-samples
       summary: Custom code samples with the "x-code-samples" extension
