--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
-        with:
-          node-version: 16.x
+        node-version:
+          - lts/*
 
       - run: npm ci
       - run: npm test
